# irish-statute-assistant

./: .env.example  .gitignore  .readthedocs.yaml  README.md  app.py  pyproject.toml  requirements.txt
docs/: conf.py  index.md  requirements.txt  spec.md
docs/api-reference/: agents.md  config.md  memory.md  pipeline.md  schemas.md
docs/architecture/: agents.md  flows.md  memory.md  overview.md  schemas.md
docs/developer-guide/: adding-a-provider.md  adding-an-agent.md  testing.md
docs/superpowers/plans/: 2026-03-10-irish-statute-assistant.md  2026-03-10-vector-store-indexer.md  2026-03-11-uv-migration.md  2026-03-17-documentation.md  2026-03-17-multi-provider-llm.md  2026-03-17-platinum-upgrade.md  2026-03-21-streamlit-ui.md  2026-03-22-docs-update-ollama-streamlit.md  2026-03-22-ollama-provider.md
docs/superpowers/specs/: 2026-03-10-irish-statute-research-design.md  2026-03-10-vector-store-indexer-design.md  2026-03-11-uv-migration-design.md  2026-03-16-gold-level-fixes-design.md  2026-03-17-documentation-design.md  2026-03-17-multi-provider-llm-design.md  (+4 more)
docs/user-guide/: configuration.md  installation.md  running.md
src/irish_statute_assistant/: config.py  context.py  exceptions.py  indexer.py  llm.py  main.py  pipeline.py  retry.py
tests/: conftest.py  test_adversarial.py  test_analyst.py  test_base_agent.py  test_clarifier.py  test_config.py  test_devils_advocate.py  test_evaluator.py  test_grounding_checker.py  test_indexer.py  test_llm.py  test_memory_stores.py  test_pipeline.py  test_researcher.py  test_schemas.py  test_session_cache.py  test_session_memory.py  test_statute_fetcher.py  test_supervisor.py  test_vector_store.py  test_writer.py
(+17 files in other folders)
