[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "irish-statute-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "tenacity>=8.0",
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "python-dotenv>=1.0",
    "langchain-chroma>=0.1",
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
